--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,22 @@
 ---
+import type { PokemonListResponse } from '../interfaces/pokemon-list.response';
 import MainLayout from '../layouts/MainLayout.astro';
+
+const resp = await fetch('https://pokeapi.co/api/v2/pokemon');
+const data = await resp.json() as PokemonListResponse ;
+
+console.log('data:', data)
 
 const title = 'Pokémon Static | Home';
 ---
 
 <MainLayout title={title}>
-	<h1 class="text-3xl text-blue-500">Astro</h1>
+	<h1 class="text-3xl">Listado de pokémons</h1>
+	<hr />
+	<ul>
+		{
+			data.results.map((pokemon) => <li>{pokemon.name}</li>)
+		}
+	</ul>
+	
 </MainLayout>
