--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import PokemonCard from '../components/pokemons/PokemonCard.astro';
 import type { PokemonListResponse } from '../interfaces/pokemon-list.response';
 import MainLayout from '../layouts/MainLayout.astro';
 
@@ -13,10 +14,18 @@ const title = 'Pokémon Static | Home';
 <MainLayout title={title}>
 	<h1 class="text-3xl">Listado de pokémons</h1>
 	<hr />
-	<ul>
+	<section
+		aria-label="Listado de Pokémons"
+		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
+	>
 		{
-			data.results.map((pokemon) => <li>{pokemon.name}</li>)
+			data.results.map(({name, url}) => (
+				<PokemonCard 
+					name={name}
+					url={url}
+				/>
+			))
 		}
-	</ul>
+	</section>
 	
 </MainLayout>
