--- a/src/components/pokemons/PokemonCard.astro
+++ b/src/components/pokemons/PokemonCard.astro
@@ -11,8 +11,11 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
 
 ---
 
-<div class="rounded border flex flex-col justify-center items-center p-2">
+<a 
+    href={`/pokemons/${name}`}
+    class="rounded border flex flex-col justify-center items-center p-2"
+>
     <img src={imageSrc} alt={name} />
 
-    <span>{name}</span>
-</div>
+    <span class="capitalize">{name}</span>
+</a>
