--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -1,29 +1,80 @@
 ---
 import type { GetStaticPaths } from "astro";
 import MainLayout from "../../layouts/MainLayout.astro";
+import PokemonCard from "../../components/pokemons/PokemonCard.astro";
 
 export const getStaticPaths = (() => {
     
     return [
-        { params:{ name: 'bulbasaur' } },
-        { params:{ name: 'ivysaur' } },
-        { params:{ name: 'venusaur' } },
-        { params:{ name: 'charmander' } },
-        { params:{ name: 'charmeleon' } },
-        { params:{ name: 'charizard' } },
-        { params:{ name: 'squirtle' } },
-        { params:{ name: 'wartotle' } },
-        { params:{ name: 'blastoise' } },
+        { 
+            params:{ name: 'bulbasaur' },
+            props: { name: 'bulbasaur', url: 'https://pokeapi.co/api/v2/pokemon/1/' }
+        },
+        { 
+            params:{ name: 'ivysaur' },
+            props: { name: 'ivysaur', url: 'https://pokeapi.co/api/v2/pokemon/2/' }
+        },
+        { 
+            params:{ name: 'venusaur' },
+            props: { name: 'venusaur', url: 'https://pokeapi.co/api/v2/pokemon/3/' }
+        },
+        { 
+            params:{ name: 'charmander' },
+            props: { name: 'charmander', url: 'https://pokeapi.co/api/v2/pokemon/4/' }
+        },
+        { 
+            params:{ name: 'charmeleon' },
+            props: { name: 'charmeleon', url: 'https://pokeapi.co/api/v2/pokemon/5/' }
+        },
+        { 
+            params:{ name: 'charizard' },
+            props: { name: 'charizard', url: 'https://pokeapi.co/api/v2/pokemon/6/' }
+        },
+        { 
+            params:{ name: 'squirtle' },
+            props: { name: 'squirtle', url: 'https://pokeapi.co/api/v2/pokemon/7/' }
+        },
+        { 
+            params:{ name: 'wartotle' },
+            props: { name: 'wartotle', url: 'https://pokeapi.co/api/v2/pokemon/8/' }
+        },
+        { 
+            params:{ name: 'blastoise' },
+            props: { name: 'blastoise', url: 'https://pokeapi.co/api/v2/pokemon/9/' }
+        },
 
     ];
 }) satisfies GetStaticPaths;
 
-const {name} = Astro.params
+const {name} = Astro.params;
+const {url} = Astro.props;
+const id = url.split('/').at(-2);
+const audioSrc = `https://raw.githubusercontent.com/PokeAPI/cries/main/cries/pokemon/latest/${id}.ogg`;
 
 ---
 
 <MainLayout
     title="Algún pokémon"
 >
-    <h1 class="text-3xl">{name}</h1>
+    <section class="mt-10 mx-10 flex flex-col justify-center items-center">
+        <div>
+            <a href="/">Regresar</a>
+            <h1 class="text-5xl capitalize">{name}</h1>
+        </div>
+        <PokemonCard  
+            name={name}
+            url={url}
+        />
+        <audio controls class="mt-5">
+            <source src={audioSrc} type="audio/ogg" />
+            Your browser does not support the audio element.
+        </audio>
+    </section>
+    
 </MainLayout>
+
+<style>
+    a {
+        @apply hover:underline text-blue-500;
+    }
+</style>
