--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MainLayout from '../layouts/MainLayout.astro';
 const resp = await fetch('https://pokeapi.co/api/v2/pokemon');
 const data = await resp.json() as PokemonListResponse ;
 
-console.log('data:', data)
+//console.log('data:', data)
 
 const title = 'Pokémon Static | Home';
 ---
