--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -34,6 +34,7 @@ const audioSrc = `https://raw.githubusercontent.com/PokeAPI/cries/main/cries/pok
         <PokemonCard  
             name={name}
             url={url}
+            isBig
         />
         <audio controls class="mt-5">
             <source src={audioSrc} type="audio/ogg" />
