ClientRouter (ViewTransition) + Name Transition

--- a/src/components/pokemons/PokemonCard.astro
+++ b/src/components/pokemons/PokemonCard.astro
@@ -22,6 +22,7 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
     ]}
 >
     <img
+        transition:name={`${name}-image`}
         class:list={[
             {
                 'w-26 h-26': isBig,
