--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,6 @@
 ---
+import { ClientRouter } from 'astro:transitions';
+
 
 interface Props {
 	title: string;
@@ -15,6 +17,8 @@ const {title} = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
+		<ClientRouter />
 	</head>
 	<body class="bg-slate-800 text-slate-100 m-auto max-w-3xl">
 		<main class="mt-10">
