--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,12 +1,19 @@
 ---
 import { ClientRouter } from 'astro:transitions';
+import { siteInfo } from 'src/consts/site-info';
 
 
 interface Props {
-	title: string;
+	title?: string;
+	image?: string;
+	description?: string;
 }
 
-const {title} = Astro.props;
+const {
+		title = siteInfo.title,
+		description = siteInfo.description,
+		image,
+	} = Astro.props;
 ---
 
 <!doctype html>
@@ -16,6 +23,17 @@ const {title} = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+
+		<!-- SEO -->
+		<meta name="description" content={description} />
+		<meta name="author" content={'Leonardo Alonzo'} />
+		
+		<!-- OG Metatags -->
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={description} />
+		<meta property="og:image" content={image} />
+		
+		<!-- Required -->
 		<title>{title}</title>
 
 		<ClientRouter />
