--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Title from '@components/shared/Title.astro';
 import PokemonCard from '../components/pokemons/PokemonCard.astro';
 import type { PokemonListResponse } from '../interfaces/pokemon-list.response';
 import MainLayout from '../layouts/MainLayout.astro';
@@ -12,8 +13,7 @@ const title = 'Pokémon Static | Home';
 ---
 
 <MainLayout title={title}>
-	<h1 class="text-3xl">Listado de pokémons</h1>
-	<hr />
+	<Title>Listado</Title>
 	<section
 		aria-label="Listado de Pokémons"
 		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-5 gap-4 mt-5"
