--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -4,6 +4,7 @@ import MainLayout from "../../layouts/MainLayout.astro";
 import PokemonCard from "../../components/pokemons/PokemonCard.astro";
 import type { PokemonListResponse } from "../../interfaces/pokemon-list.response";
 import Title from "@components/shared/Title.astro";
+import { Icon } from 'astro-icon/components';
 
 export const getStaticPaths = (async() => {
     
@@ -31,11 +32,19 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
     image={imageSrc}
 >
     <section class="mt-10 mx-10 flex flex-col justify-center items-center">
-        <div>
-            <!-- <a href="/">Regresar</a> -->
-            <button onclick="history.back()" class="text-blue-500">Regresar</button>
-            <Title>{name}</Title>
+        <div class="flex flex-row">
+            <div>
+                <!-- <a href="/">Regresar</a> -->
+                <button onclick="history.back()" class="text-blue-500">Regresar</button>
+                <Title>{name}</Title>
+            </div>
+    
+            <button id="btn-favorite" class="ml-4 mt-6">
+                <Icon name="heart-outline" size={50} />
+                <Icon class="hidden" name="heart-full" size={50} />
+            </button>
         </div>
+
         <PokemonCard  
             name={name}
             url={url}
@@ -52,5 +61,9 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
 <style>
     a {
         @apply hover:underline text-blue-500;
+    }
+
+    #btn-favorite {
+        @apply hover:animate-pulse;
     }
 </style>
