--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -39,7 +39,7 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
                 <Title>{name}</Title>
             </div>
     
-            <button id="btn-favorite" class="ml-4 mt-6">
+            <button id="btn-favorite" class="ml-4 mt-6" data-name={name} data-id={id} >
                 <Icon name="heart-outline" size={50} />
                 <Icon class="hidden" name="heart-full" size={50} />
             </button>
@@ -57,6 +57,30 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
     </section>
     
 </MainLayout>
+
+<script>
+    interface FavoritePokemon {
+        name: string;
+        id: number;
+    }
+
+
+    document.addEventListener('astro:page-load', () => {
+        const btnFavorite = document.querySelector('#btn-favorite') as HTMLButtonElement;
+
+        if(!btnFavorite) return;
+
+        const name = btnFavorite.dataset.name;
+        const id = btnFavorite.dataset.id;
+
+        btnFavorite.addEventListener('click', ()=> {
+            console.log({name, id})
+        })
+    })
+
+    
+
+</script>
 
 <style>
     a {
