--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -64,8 +64,7 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
         id: number;
     }
 
-
-    document.addEventListener('astro:page-load', () => {
+    const handlePageLoad = () => {
         const btnFavorite = document.querySelector('#btn-favorite') as HTMLButtonElement;
 
         if(!btnFavorite) return;
@@ -76,9 +75,16 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
         btnFavorite.addEventListener('click', ()=> {
             console.log({name, id})
         })
-    })
+    }
 
-    
+    document.addEventListener('astro:page-load', handlePageLoad);
+
+    // Ciclo de vida del View Transition
+    // astro:before-preparation
+    // astro:after-preparation
+    // astro:before-swap
+    // astro:after-swap
+    // astro:page-load
 
 </script>
 
