--- a/src/pages/pokemons/[name].astro
+++ b/src/pages/pokemons/[name].astro
@@ -40,8 +40,8 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
             </div>
     
             <button id="btn-favorite" class="ml-4 mt-6" data-name={name} data-id={id} >
-                <Icon name="heart-outline" size={50} />
-                <Icon class="hidden" name="heart-full" size={50} />
+                <Icon data-outline name="heart-outline" size={50} />
+                <Icon data-full class="hidden" name="heart-full" size={50} />
             </button>
         </div>
 
@@ -65,15 +65,45 @@ const imageSrc = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprit
     }
 
     const handlePageLoad = () => {
+
+        let favoritePokemons: FavoritePokemon[] = JSON.parse(
+            localStorage.getItem('favorites') ?? '[]'
+        );
+
         const btnFavorite = document.querySelector('#btn-favorite') as HTMLButtonElement;
 
         if(!btnFavorite) return;
 
-        const name = btnFavorite.dataset.name;
-        const id = btnFavorite.dataset.id;
+        const name = btnFavorite.dataset.name ?? '';
+        const id = btnFavorite.dataset.id ?? '';
+
+        const heartOutline = btnFavorite.querySelector('[data-outline]') as HTMLElement;
+        const heartFull = btnFavorite.querySelector('[data-full]') as HTMLElement;
+
+        const toggleFavorite = () => {
+            const isFavorite = favoritePokemons.some((fav) => fav.name === name);
+
+            if(isFavorite) {
+                //Remover
+                favoritePokemons = favoritePokemons.filter((fav) => fav.name !== name)
+            }
+            else{
+                //Agregar
+                favoritePokemons.push({
+                    id: +id,
+                    name: name
+                })
+            }
+
+            localStorage.setItem('favorites', JSON.stringify(favoritePokemons));
+        }
 
         btnFavorite.addEventListener('click', ()=> {
-            console.log({name, id})
+            //console.log({name, id})
+            heartOutline.classList.toggle('hidden');
+            heartFull.classList.toggle('hidden');
+
+            toggleFavorite();
         })
     }
 
