--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Counter } from "@components/Counter";
 import Title from "@components/shared/Title.astro";
 import MainLayout from "src/layouts/MainLayout.astro";
 
@@ -7,4 +8,6 @@ import MainLayout from "src/layouts/MainLayout.astro";
 
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
+
+    <Counter client:load/>
 </MainLayout>
