--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -9,4 +9,16 @@ import MainLayout from "src/layouts/MainLayout.astro";
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
 
+    <div
+        style={{
+           height: '2000px',
+           backgroundColor: 'red',
+           opacity:0.4   
+        }}
+    >
+
+    </div>
+
+    <!-- <Counter client:only="solid-js"/> -->
+    <Counter client:visible/>
 </MainLayout>
