--- a/src/pages/islands/index.astro
+++ b/src/pages/islands/index.astro
@@ -3,12 +3,14 @@ import { Counter } from "@components/Counter";
 import Title from "@components/shared/Title.astro";
 import MainLayout from "src/layouts/MainLayout.astro";
 
-
+const counterValue = 20;
 ---
 
-<MainLayout title="Favoritos">
-    <Title>Favoritos</Title>
-
+<MainLayout title="Islas">
+    <Title>Islas</Title>
+    <video controls="" autoplay=""  transition:persist="playing-video">
+        <source src="https://ia804502.us.archive.org/33/items/GoldenGa1939_3/GoldenGa1939_3_512kb.mp4" type="video/mp4">
+    </video>
     <div
         style={{
            height: '2000px',
@@ -20,5 +22,12 @@ import MainLayout from "src/layouts/MainLayout.astro";
     </div>
 
     <!-- <Counter client:only="solid-js"/> -->
-    <Counter client:visible/>
+    <Counter
+        transition:persist="counter"
+        transition:persist-props
+        client:visible 
+        initialValue={counterValue}
+    >
+        <Title>Counter Island</Title>
+    </Counter>
 </MainLayout>
