--- a/src/pages/favorites/index.astro
+++ b/src/pages/favorites/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Counter } from "@components/Counter";
+import { FavoritePokemons } from "@components/pokemons/FavoritePokemons";
 import Title from "@components/shared/Title.astro";
 import MainLayout from "src/layouts/MainLayout.astro";
 
@@ -9,5 +10,6 @@ import MainLayout from "src/layouts/MainLayout.astro";
 <MainLayout title="Favoritos">
     <Title>Favoritos</Title>
     
+    <FavoritePokemons client:only="solid-js" />
     
 </MainLayout>
